amended text l-r margins and fixed img rendering on tablet on cities pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@ p {
 .city-image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 #map {
